# agent-skillops-platform

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: SkillOpsDependencies.cmake
deploy/config/: artifact-service.yaml  experience-service.yaml  gateway-service.yaml  identity-service.yaml  project-service.yaml  review-service.yaml  skill-service.yaml
deploy/sql/: 001_schema.sql
docs/: README.md  architecture.md  domain-model.md  project-vision.md  roadmap.md  实施计划.md
docs/前端文档/: 00. 前端产品与页面规划.md  01. 前端技术选型与工程结构.md  02. 路由与页面结构设计.md  03. 组件与交互规范.md  04. API协作与状态管理.md  05. 前端实施计划.md
docs/子服务文档/: 00. 子服务文档编写规范.md
docs/服务端文档/: 00. 产品文档.md  01. 业务分析.md  02. 项目设计.md  03. 接口设计.md  04. 数据库设计.md  05. 消息队列设计.md  06. 开发规范与工程约束.md  07. 子服务设计总览.md  08. Skill质量标准与审核规范.md  09. Skill类型与模板规范.md  10. 经验转Skill规则设计.md  11. 过期检测与维护机制.md  12. 开发环境与仓库布局.md  13. 多媒体经验资产处理设计.md  15. 第一阶段服务端工程骨架.md
idl/openapi/: skillops-gateway.openapi.yaml
idl/proto/: README.md
scripts/: e2e_smoke.sh  run_all_services.sh
services/artifact-service/: CMakeLists.txt
services/artifact-service/include/skillops/artifact/: artifact_service.h
services/artifact-service/source/: main.cc
services/artifact-service/source/service/: artifact_service.cc
services/common/: CMakeLists.txt
services/common/include/skillops/common/: config.h  http_client.h  http_server.h  json.h  logging.h  request_context.h
services/common/source/config/: config.cc
services/common/source/context/: request_context.cc
services/common/source/http/: http_client.cc  http_server.cc
services/experience-service/: CMakeLists.txt
services/experience-service/include/skillops/experience/: experience_service.h
services/experience-service/source/: main.cc
services/experience-service/source/service/: experience_service.cc
services/gateway-service/: CMakeLists.txt
services/gateway-service/include/skillops/gateway/: simple_http_server.h
services/gateway-service/source/: main.cc
services/gateway-service/source/server/: simple_http_server.cc
services/identity-service/: CMakeLists.txt
services/identity-service/include/skillops/identity/: identity_service.h  user_record.hxx
services/identity-service/source/: main.cc
services/identity-service/source/service/: identity_service.cc
services/project-service/: CMakeLists.txt
services/project-service/include/skillops/project/: project_record.hxx  project_service.h
services/project-service/source/: main.cc
services/project-service/source/service/: project_service.cc
services/review-service/: CMakeLists.txt
services/review-service/include/skillops/review/: review_service.h
services/review-service/source/: main.cc
services/review-service/source/service/: review_service.cc
services/skill-service/: CMakeLists.txt
services/skill-service/include/skillops/skill/: skill_service.h
services/skill-service/source/: main.cc
services/skill-service/source/service/: skill_service.cc
